# unirust

./: .gitignore  01_STRUCTURAL_AUTOPSY.md  02_ARCHITECTURE_BLUEPRINT.md  04_VERIFY.sh  AGENTS.md  BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  Containerfile  DESIGN.md  DISTRIBUTION.md  GPU.md  LICENSE  OPERATIONS.md  README.md  README_GRPC.md  STORAGE.md  TESTING.md  build.rs  compose.yaml  prod.MD
.github/workflows/: ci.yml  release.yml
benches/: bench_diagnostic.rs  bench_distributed.rs  bench_micro.rs  bench_quick.rs  bench_scale.rs  entity_benchmark.rs  micro_benchmarks.rs  perf_suite.rs  scale_benchmark.rs
examples/: basic_example.rs  cluster.rs  distributed_client.rs  grpc_client_example.rs  grpc_server.rs  in_memory.rs  persistent_shard.rs  stream_to_minitao.rs  stream_to_minitao_server.rs  unirust.toml
proto/: unirust.proto
scripts/: bench_smoke.sh  cluster.sh  export_conflict_presets.sh  minitao_e2e.sh  podman_cluster.sh  podman_demo.sh  scale_persistent.sh  verify_hft.sh  verify_optimization.sh
src/: coalescer.rs  config.rs  conflicts.rs  distributed.rs  distributed_optimized.rs  dsu.rs  graph.rs  grpc_server.rs  index.rs  lib.rs  linker.rs  linker_optimized.rs  minitao_grpc.rs  minitao_store.rs  model.rs  ontology.rs  partitioned.rs  persistence.rs  profile.rs  query.rs  sharding.rs  store.rs  temporal.rs  test_support.rs  utils.rs
src/config/: defaults.rs  mod.rs  tuning.rs
src/hft/: aligned.rs  async_wal.rs  bigtable_opts.rs  compression.rs  interner.rs  mod.rs  queue.rs  sharded_cache.rs  simd_hash.rs  write_buffer.rs  zero_copy.rs
src/perf/: aligned.rs  async_wal.rs  atomic_dsu.rs  bigtable_opts.rs  compression.rs  interner.rs  mod.rs  queue.rs  zero_copy.rs
tests/: distributed_apply_ontology.rs  distributed_conflicts_presets.rs  distributed_cross_shard_reconciliation.rs  distributed_cross_shard_reconciliation_persistent.rs  distributed_e2e.rs  distributed_ingest_batch_url.rs  distributed_ingest_stream.rs  distributed_metrics.rs  distributed_rebalance.rs  distributed_rebalance_stream.rs  distributed_reliability.rs  distributed_router_admin.rs  distributed_wal_chaos.rs  distributed_wal_replay.rs  linker_state_recovery.rs  minitao_persist.rs  query_latency_regression.rs  snapshot_restore_scale.rs  streaming_idempotent.rs  temporal_evolution.rs
tests/support/: mod.rs
web/: app.js  index.html  presets.json  styles.css
