[package]
name = "unirust-rs"
version = "0.1.0"
edition = "2021"
description = "High-performance temporal entity resolution engine with conflict detection, knowledge graph export, and perspective-weighted data mastering for multi-source datasets."
authors = ["unirust contributors"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/unirust/unirust"
documentation = "https://docs.rs/unirust"
keywords = ["entity-resolution", "temporal", "data-deduplication", "conflict-resolution"]
categories = ["data-structures", "algorithms"]

[dependencies]
# Time handling
time = { version = "0.3.44", features = ["serde", "macros"] }
chrono = { version = "0.4.42", features = ["serde"] }

# Collections and hashing
hashbrown = "0.16.1"
indexmap = { version = "2.12.1", features = ["serde"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"

# Parallel processing
rayon = "1.11.0"

# Property-based testing
proptest = "1.9.0"

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Logging
tracing = "0.1.44"

# String interning
string-interner = "0.19.0"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
proptest = "1.9.0"
rand = "0.9.2"

[[bench]]
name = "entity_benchmark"
harness = false

[features]
default = []
