[package]
name = "unirust-rs"
version = "0.1.0"
edition = "2021"
description = "High-performance temporal entity resolution engine with conflict detection, knowledge graph export, and perspective-weighted data mastering for multi-source datasets."
authors = ["unirust contributors"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/unirust/unirust"
documentation = "https://docs.rs/unirust"
keywords = ["entity-resolution", "temporal", "data-deduplication", "conflict-resolution"]
categories = ["data-structures", "algorithms"]

[dependencies]
# Time handling
time = { version = "0.3.44", features = ["serde", "macros"] }
chrono = { version = "0.4.42", features = ["serde"] }

# Collections and hashing
hashbrown = { version = "0.16.1", features = ["serde"] }
smallvec = "1.13"
rustc-hash = "2.0"

# Parallelism
rayon = "1.10"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
bincode = "1.3.3"
rocksdb = "0.24.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "time"] }
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"
lru = "0.12.3"

# Property-based testing
proptest = "1.9.0"

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Logging
tracing = "0.1.44"
tracing-subscriber = "0.3.19"

# String interning
string-interner = "0.19.0"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async channels for MPMC
async-channel = "2.3"

# Concurrent data structures (for optimized modules)
dashmap = "6"
parking_lot = "0.12"

# Optional dependencies
rand = { version = "0.9.2", optional = true }

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
proptest = "1.9.0"
tempfile = "3.12.0"
unirust-rs = { path = ".", features = ["test-support"] }

[build-dependencies]
tonic-build = "0.11"

# Quick benchmarks (~30s) - CI/dev feedback
[[bench]]
name = "bench_quick"
harness = false

# Scale benchmarks (~3-5min) - pre-merge validation
[[bench]]
name = "bench_scale"
harness = false

# Microbenchmarks (~1min) - component internals
[[bench]]
name = "bench_micro"
harness = false

# Diagnostic tool (one-shot) - deep analysis
[[bench]]
name = "bench_diagnostic"
harness = false

# Load test TUI binary
[[bin]]
name = "unirust_loadtest"
path = "src/bin/unirust_loadtest.rs"
required-features = ["test-support"]

[features]
default = []
profiling = []
# Enable test support module (used by integration tests and benchmarks)
test-support = ["rand"]
